# LeafDB

./: .gitignore  CMakeLists.txt  README.md  ai_interface.cpp  ai_interface.h  btree.cpp  btree.h  catalog.cpp  catalog.h  encode.cpp  encode.h  executor.cpp  executor.h  index.cpp  index.h  kvstore.cpp  kvstore.h  llm_adapter.cpp  llm_adapter.h  lock_manager.cpp  lock_manager.h  main.cpp  mcp_tools.cpp  mcp_tools.h  record.cpp  record.h  sql.cpp  sql.h  storage.cpp  storage.h  table.cpp  table.h  transaction_fix_notes.txt  types.h  wal.cpp  wal.h  web_ui.cpp  web_ui.h
